# broadcast-net

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  TODO  test.c
.github/workflows/: codeql.yml  codeql2.yml  greetings.yml
include/: bcnet.h
include/bcnet/: auth.h  bcnet.h
src/: auth.c  bcnet.c
src/bcnet/: bcnet.c
src/bcnet/unix/: bcnet.c
src/bcnet/win32/: bcnet.c
src/unix/: bcnet.c
src/win32/: bcnet.c
test/: main.c
tests/: test.c
